--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo"><img src="logo.jpg" alt="brand-logo" class="brand-logo"></a>
+                        <a href="#" class="logo mr-3"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -42,29 +42,44 @@
                                 <a class="nav-link" href="#contact">CONTACT</a>
                             </li> 
                             <li class="nav-item hide">
-                                    <span class="">
-                                            <i class="fab fa-instagram ml-3"><a href="#" class="nav-link"></a></i>
-                                            <i class="fab fa-facebook ml-3"><a href="#" class="nav-link"></a></i>
-                                            <i class="fab fa-twitter ml-3"><a href="#" class="nav-link"></a></i>
+                                    <span class="social-media">
+                                           <a href="#" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
+                                            <a href="#" class="nav-link"><i class="fab fa-facebook ml-3"></i></a>
+                                            <a href="#" class="nav-link"><i class="fab fa-twitter ml-3"></i></a>
                                     </span>
                             </li>                           
                             </ul>
                         </div>
-                        <span class="navbar-text">
-                                <i class="fab fa-instagram ml-3"><a href="#" class="nav-link"></a></i>
-                                <i class="fab fa-facebook ml-3"><a href="#" class="nav-link"></a></i>
-                                <i class="fab fa-twitter ml-3"><a href="#" class="nav-link"></a></i>
+                        <span class="nav-link navbar-text social-media">
+                                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+                                <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
+                                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </span>
                     </div>
                     </nav>
 
     </header>
-    <div class="container-fluid text-center pb-5 bg-primary" >
-        <h2 class="display-4" id="home">A Creative Agency</h2>
-        <button class="bg-dark"><a href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+  
+    <div class="text-center fill-screen home" id="home">
+    <div class="bag">
+        <h4 class="wordCarousel display-4">    
+            <span>Get more: </span>  
+            <div class="dive"> 
+                <ul class="flip4"> 
+                    <li class="liste text-primary">Creativity</li>
+                    <li class="liste text-primary">Coverage</li>
+                    <li class="liste text-primary">Memories</li> 
+                    <li class="liste text-primary">Engagement</li>  
+                </ul>
+            </div>  
+        </h4>
     </div>
-   <div class="container" id="about">
-       <h2 class="display-4">
+        <h2 class="display-4 text-primary">A Creative Agency </h2>
+        <button class="bg-dark"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+    </div>
+
+   <div class="container content-filler" id="about">
+       <h2 class="display-4 text-primary">
         about us
        </h2>
        <p class="story">
@@ -79,7 +94,7 @@
         </p>
    </div>
    <div>
-       <div class="container" id="services">
+       <div class="container-fluid" id="services" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
             <h2 class="display-4">
                     our services
                 </h2>
@@ -117,7 +132,7 @@
         </div>
    </div>
     <div class="container" id="approach">
-        <h2 class="display-4">our approach</h2>
+        <h2 class="display-4 text-primary">our approach</h2>
         <h5 class="under-title">three things that make us unique</h5>
         <div class="row">
             <aside class="col-sm-4">
@@ -153,7 +168,7 @@
         </div>
     </div>
     </div>
-    <div class="container" id="testimonials">
+    <div class="container-fluid" id="testimonials" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
             <h2 class="display-4">service review</h2>
             <div class="carousel">
                 <section class="slide">
@@ -167,6 +182,7 @@
                         <span class="star"></span>
                     </span>
                 </section>
+            </div>
                 <section class="slide">
                     <p class="text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
@@ -181,7 +197,7 @@
     </div>
     <div class="container-fluid" id="client">
         <div class="container5">
-            <h2 class="display-4">Our clients</h2>
+            <h2 class="display-4 text-primary">Our clients</h2>
             <h3 class="sub-title">
                 The people who have trusted us so far
             </h3><br>
@@ -235,7 +251,7 @@
         </div>
         </div>
     </div>
-    <div class="container" id="contact">
+    <div class="container" id="contact" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
             <h2 class="display-4">
                     contact us
                 </h2>            
@@ -265,7 +281,7 @@
                             <label for="phone-number" class="font-weight-bold">Phone <span>*</span></label><br>
                             <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number"><br>
                             <label for="name" class="font-weight-bold">Message<span>*</span></label><br>
-                            <textarea name="message" rows="5" cols="40" placeholder="YOUR MESSAGE"></textarea><br>
+                            <textarea name="message" rows="5" cols="30" placeholder="YOUR MESSAGE"></textarea><br>
                             <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
                         </form>
             </section>
@@ -286,7 +302,7 @@
         </div>
     </div>
     <footer class="container-fluid blockquote-footer text-center">
-    © 2020 All rights reserved. Powered By IGTV
+    © 2020 All rights reserved. Powered By ACE MEDIA
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
