--- a/index.html
+++ b/index.html
@@ -94,43 +94,45 @@
         </p>
    </div>
    <div>
-       <div class="container-fluid" id="services" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-            <h2 class="display-4">
-                    our services
-                </h2>
-        <div class="row">
-            <aside class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                    Social Media Management Services
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </aside>
-            <section class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                    Digital Marketing Services
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </section>
-            <aside class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                    Branding Services
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </aside>
-        </div>
-   </div>
+      <div class="container-fluid" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+            <div class="container" id="services" >
+                    <h2 class="display-4">
+                            our services
+                        </h2>
+                <div class="row">
+                    <aside class="col-sm-4">
+                        <span class="logo"></span>
+                        <h3 class="sub-title">
+                            Social Media Management Services
+                        </h3>
+                        <p class="story">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
+                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
+                        </p>
+                    </aside>
+                    <section class="col-sm-4">
+                        <span class="logo"></span>
+                        <h3 class="sub-title">
+                            Digital Marketing Services
+                        </h3>
+                        <p class="story">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
+                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
+                        </p>
+                    </section>
+                    <aside class="col-sm-4">
+                        <span class="logo"></span>
+                        <h3 class="sub-title">
+                            Branding Services
+                        </h3>
+                        <p class="story">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
+                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
+                        </p>
+                    </aside>
+                </div>
+           </div>
+      </div>
     <div class="container" id="approach">
         <h2 class="display-4 text-primary">our approach</h2>
         <h5 class="under-title">three things that make us unique</h5>
@@ -168,32 +170,34 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid" id="testimonials" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-            <h2 class="display-4">service review</h2>
-            <div class="carousel">
-                <section class="slide">
-                    <p class="text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                         non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                    </p>
-                    <span>
-                        Ayo Arowle, <span class="font-weight-bold">Creative Director</span>
-                        <code>LVO</code>
-                        <span class="star"></span>
-                    </span>
-                </section>
+    <div class="container-fluid"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+            <div class="container" id="testimonials">
+                    <h2 class="display-4">service review</h2>
+                    <div class="carousel">
+                        <section class="slide">
+                            <p class="text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
+                                 non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
+                            </p>
+                            <span>
+                                Ayo Arowle, <span class="font-weight-bold">Creative Director</span>
+                                <code>LVO</code>
+                                <span class="star"></span>
+                            </span>
+                        </section>
+                    </div>
+                        <section class="slide">
+                            <p class="text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
+                                 non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
+                            </p>
+                            <span>
+                                Ayoka, <span class="font-weight-bold">CEO</span>
+                                <code>SOSO PRO MAKEUP</code>
+                                <span class="star"></span>
+                            </span>
+                        </section>
             </div>
-                <section class="slide">
-                    <p class="text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                         non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                    </p>
-                    <span>
-                        Ayoka, <span class="font-weight-bold">CEO</span>
-                        <code>SOSO PRO MAKEUP</code>
-                        <span class="star"></span>
-                    </span>
-                </section>
     </div>
     <div class="container-fluid" id="client">
         <div class="container5">
@@ -251,56 +255,58 @@
         </div>
         </div>
     </div>
-    <div class="container" id="contact" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-            <h2 class="display-4">
-                    contact us
-                </h2>            
-            <h5 class="under-title">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
-            <h6 class="">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
-        <div class="row">
-            <section class="col-sm-6">
-                        <form action="">
-                            <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
-                           <div class="row pb-2">
-                               <div class="col-lg-6 pb-2">
-                                <input type="text" name="firstname" required id="firstname" placeholder="first name">
+   <div class="container-fluid"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+        <div class="container" id="contact">
+                <h2 class="display-4">
+                        contact us
+                    </h2>            
+                <h5 class="under-title">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
+                <h6 class="">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
+            <div class="row">
+                <section class="col-sm-6">
+                            <form action="">
+                                <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
+                               <div class="row pb-2">
+                                   <div class="col-lg-6 pb-2">
+                                    <input type="text" name="firstname" required id="firstname" placeholder="first name">
+                                   </div>
+                                   <div class="col-lg-6">
+                                    <input type="text" required name="lastname" id="firstname" placeholder="last name">
+                                   </div>
                                </div>
-                               <div class="col-lg-6">
-                                <input type="text" required name="lastname" id="firstname" placeholder="last name">
-                               </div>
-                           </div>
-                           <label for="email" class="font-weight-bold">Email <span>*</span></label><br>
-                            <div class="row pb-2">
-                                <div class="col-lg-6 pb-2">
-                                    <input type="email" required name="email" id="email" placeholder="your email">
+                               <label for="email" class="font-weight-bold">Email <span>*</span></label><br>
+                                <div class="row pb-2">
+                                    <div class="col-lg-6 pb-2">
+                                        <input type="email" required name="email" id="email" placeholder="your email">
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <input type="email" name="email" id="email" placeholder="confirm email">
+                                    </div>
                                 </div>
-                                <div class="col-lg-6">
-                                    <input type="email" name="email" id="email" placeholder="confirm email">
-                                </div>
-                            </div>
-                            <label for="phone-number" class="font-weight-bold">Phone <span>*</span></label><br>
-                            <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number"><br>
-                            <label for="name" class="font-weight-bold">Message<span>*</span></label><br>
-                            <textarea name="message" rows="5" cols="30" placeholder="YOUR MESSAGE"></textarea><br>
-                            <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
-                        </form>
-            </section>
-            <aside class="col-sm-6">
-                <h6 class="under-title">Talk to us</h6>
-                <p class="text">Call or e-mail us about your online marketing needs.</p>
-                <div class="contact">
-                   <p> <span class="icon"></span>0000-0000-000 </p>
-                   <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
-                </div>
-                <h6 class="under-title">Connect with us</h6>
-                <div class="social-media">
-                    <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-twitter"></i></a></span>        
-                    <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-facebook"></i></a></span>
-                    <span class="insta"><a href="#" class="nav-link"><i class="fab fa-instagram "></i></a></span>
-                </div>
-            </aside>
+                                <label for="phone-number" class="font-weight-bold">Phone <span>*</span></label><br>
+                                <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number"><br>
+                                <label for="name" class="font-weight-bold">Message<span>*</span></label><br>
+                                <textarea name="message" rows="5" cols="30" placeholder="YOUR MESSAGE"></textarea><br>
+                                <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
+                            </form>
+                </section>
+                <aside class="col-sm-6">
+                    <h6 class="under-title">Talk to us</h6>
+                    <p class="text">Call or e-mail us about your online marketing needs.</p>
+                    <div class="contact">
+                       <p> <span class="icon"></span>0000-0000-000 </p>
+                       <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
+                    </div>
+                    <h6 class="under-title">Connect with us</h6>
+                    <div class="social-media">
+                        <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-twitter"></i></a></span>        
+                        <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-facebook"></i></a></span>
+                        <span class="insta"><a href="#" class="nav-link"><i class="fab fa-instagram "></i></a></span>
+                    </div>
+                </aside>
+            </div>
         </div>
-    </div>
+   </div>
     <footer class="container-fluid blockquote-footer text-center">
     © 2020 All rights reserved. Powered By ACE MEDIA
     </footer>
