scrolling effect added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     </header>
   
-    <div class="text-center fill-screen home" id="home">
+    <div class="text-center fill-screen home" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
     <div class="bag">
         <h4 class="wordCarousel display-4">    
             <span>Get more: </span>  
@@ -94,7 +94,7 @@
         </p>
    </div>
    <div>
-      <div class="container-fluid" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+      <div class="container-fluid fill-screen fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
             <div class="container" id="services" >
                     <h2 class="display-4">
                             our services
@@ -170,7 +170,7 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+    <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
             <div class="container" id="testimonials">
                     <h2 class="display-4">service review</h2>
                     <div class="carousel">
@@ -255,7 +255,7 @@
         </div>
         </div>
     </div>
-   <div class="container-fluid"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+   <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
         <div class="container" id="contact">
                 <h2 class="display-4">
                         contact us
