--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
       </div>
     <div class="container" id="approach">
         <h2 class="display-4 text-primary">our approach</h2>
-        <h5 class="under-title">three things that make us unique</h5>
+        <h3 class="under-title text-center pb-3">Three things that make us unique</h3>
         <div class="row">
             <aside class="col-sm-4">
                 <span class="logo"></span>
                 <h3 class="sub-title">
-                    we engage
+                    We engage
                 </h3>
                 <p class="story">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
@@ -160,7 +160,7 @@
             <aside class="col-sm-4">
                 <span class="logo"></span>
                 <h3 class="sub-title">
-                   we promote
+                   We promote
                 </h3>
                 <p class="story">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
@@ -170,12 +170,12 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+    <div class="container-fluid fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
             <div class="container" id="testimonials">
-                    <h2 class="display-4">service review</h2>
+                    <h2 class="display-4 py-3">service review</h2>
                     <div class="carousel">
                         <section class="slide">
-                            <p class="text">
+                            <p class="story">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
                                  non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
                             </p>
@@ -202,7 +202,7 @@
     <div class="container-fluid" id="client">
         <div class="container5">
             <h2 class="display-4 text-primary">Our clients</h2>
-            <h3 class="sub-title">
+            <h3 class="sub-title  text-center">
                 The people who have trusted us so far
             </h3><br>
             <div>
@@ -292,7 +292,7 @@
                 </section>
                 <aside class="col-sm-6">
                     <h6 class="under-title">Talk to us</h6>
-                    <p class="text">Call or e-mail us about your online marketing needs.</p>
+                    <p class="story">Call or e-mail us about your online marketing needs.</p>
                     <div class="contact">
                        <p> <span class="icon"></span>0000-0000-000 </p>
                        <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
