--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+    <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
             <div class="container" id="testimonials">
                     <h2 class="display-4 py-3">service review</h2>
                     <div class="carousel">
