--- a/index.html
+++ b/index.html
@@ -59,27 +59,30 @@
                     </nav>
 
     </header>
-  
-    <div class="text-center fill-screen home" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
-    <div class="bag">
-        <h4 class="wordCarousel display-4">    
-            <span>Get more: </span>  
-            <div class="dive"> 
-                <ul class="flip4"> 
-                    <li class="liste text-primary">Creativity</li>
-                    <li class="liste text-primary">Coverage</li>
-                    <li class="liste text-primary">Memories</li> 
-                    <li class="liste text-primary">Engagement</li>  
-                </ul>
-            </div>  
-        </h4>
-    </div>
-        <h2 class="display-4 text-primary">A Creative Agency </h2>
-        <button class="bg-dark"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+    <div class="text-center fill-screen container4 home py-5" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
+        <div class="container6">
+           <div class="container7">
+            <div class="bag">
+                <h4 class="wordCarousel display-4">    
+                    <span>Get more: </span>  
+                    <div class="dive"> 
+                        <ul class="flip4"> 
+                            <li class="liste text-primary">Creativity</li>
+                            <li class="liste text-primary">Coverage</li>
+                            <li class="liste text-primary">Memories</li> 
+                            <li class="liste text-primary">Engagement</li>  
+                        </ul>
+                    </div>  
+                </h4>
+           </div>
+                <h2 class="display-4 text-primary">A Creative Agency </h2>
+                <button class="bg-dark"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+           </div>
+        </div>
     </div>
 
    <div class="container content-filler" id="about">
-       <h2 class="display-4 text-primary">
+       <h2 class="display-4 py-3 text-primary">
         about us
        </h2>
        <p class="story">
@@ -94,9 +97,11 @@
         </p>
    </div>
    <div>
-      <div class="container-fluid fill-screen fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-            <div class="container" id="services" >
-                    <h2 class="display-4">
+      <div class="container-fluid container4 fill-screen fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+          <div class="container6">
+              <div class="container7">
+                <div class="container" id="services" >
+                    <h2 class="display-4 py-3">
                             our services
                         </h2>
                 <div class="row">
@@ -132,9 +137,11 @@
                     </aside>
                 </div>
            </div>
+              </div>
+          </div>
       </div>
     <div class="container" id="approach">
-        <h2 class="display-4 text-primary">our approach</h2>
+        <h2 class="display-4 text-primary py-3">our approach</h2>
         <h3 class="under-title text-center pb-3">Three things that make us unique</h3>
         <div class="row">
             <aside class="col-sm-4">
@@ -170,39 +177,43 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
-            <div class="container" id="testimonials">
-                    <h2 class="display-4 py-3">service review</h2>
-                    <div class="carousel">
-                        <section class="slide">
-                            <p class="story">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                                 non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                            </p>
-                            <span>
-                                Ayo Arowle, <span class="font-weight-bold">Creative Director</span>
-                                <code>LVO</code>
-                                <span class="star"></span>
-                            </span>
-                        </section>
-                    </div>
-                        <section class="slide">
-                            <p class="text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                                 non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                            </p>
-                            <span>
-                                Ayoka, <span class="font-weight-bold">CEO</span>
-                                <code>SOSO PRO MAKEUP</code>
-                                <span class="star"></span>
-                            </span>
-                        </section>
+    <div class="container-fluid  container4 fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+            <div class="container6">
+                <div class="container7">
+                    <div class="container" id="testimonials">
+                        <h2 class="display-4 py-3">service review</h2>
+                        <div class="carousel">
+                            <section class="slide story">
+                                <p class="story">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
+                                     non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
+                                </p>
+                                <span>
+                                    Ayo Arowle, <span class="font-weight-bold">Creative Director</span>
+                                    <code>LVO</code>
+                                    <span class="star"></span>
+                                </span>
+                            </section>
+                            <section class="slide story">
+                                <p class="text">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
+                                     non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
+                                </p>
+                                <span>
+                                    Ayoka, <span class="font-weight-bold">CEO</span>
+                                    <code>SOSO PRO MAKEUP</code>
+                                    <span class="star"></span>
+                                </span>
+                            </section>
+                        </div>    
+                </div>
+                </div>
             </div>
     </div>
     <div class="container-fluid" id="client">
-        <div class="container5">
-            <h2 class="display-4 text-primary">Our clients</h2>
-            <h3 class="sub-title  text-center">
+        <div class="container5 container">
+            <h2 class="display-4 text-primary py-3">Our clients</h2>
+            <h3 class="sub-title text-center">
                 The people who have trusted us so far
             </h3><br>
             <div>
@@ -255,14 +266,16 @@
         </div>
         </div>
     </div>
-   <div class="container-fluid fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-        <div class="container" id="contact">
-                <h2 class="display-4">
+   <div class="container-fluid container4 py-3 fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+       <div class="container6">
+           <div class="container7">
+            <div class="container" id="contact">
+                <h2 class="display-4 py-4">
                         contact us
                     </h2>            
-                <h5 class="under-title">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
-                <h6 class="">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
-            <div class="row">
+                <h5 class="story">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
+                <h6 class="story">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
+                <div class="row pt-4">
                 <section class="col-sm-6">
                             <form action="">
                                 <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
@@ -291,13 +304,13 @@
                             </form>
                 </section>
                 <aside class="col-sm-6">
-                    <h6 class="under-title">Talk to us</h6>
+                    <h6 class="story">Talk to us</h6>
                     <p class="story">Call or e-mail us about your online marketing needs.</p>
-                    <div class="contact">
+                    <div class="story">
                        <p> <span class="icon"></span>0000-0000-000 </p>
                        <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
                     </div>
-                    <h6 class="under-title">Connect with us</h6>
+                    <h6 class="story">Connect with us</h6>
                     <div class="social-media">
                         <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-twitter"></i></a></span>        
                         <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-facebook"></i></a></span>
@@ -306,7 +319,19 @@
                 </aside>
             </div>
         </div>
+        </div>
+       </div>
    </div>
+   <!-- <div>
+    <i class="fas fa-link"></i>
+    <i class="fas fa-chart-line"></i>
+    <i class="fas fa-video"></i>
+    <i class="fas fa-users"></i>
+    <i class="fas fa-certificate"></i>
+    <i class="fas fa-envelope"></i>
+    <i class="fas fa-phone-alt"></i>
+   </div> -->
+   <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button>
     <footer class="container-fluid blockquote-footer text-center">
     © 2020 All rights reserved. Powered By ACE MEDIA
     </footer>
