validating the form

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                                      <h6 class="story">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
                                      <div class="row pt-4">
                                      <section class="col-sm-6 wow slideInLeft">
-                                                 <form action="">
+                                                 <form method="POST" action="https://api.slapform.com/oluwakemisola757@gmail.com">
                                                      <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
                                                     <div class="row pb-2">
                                                         <div class="col-lg-6 pb-2">
